# brat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  direct_test.txt  install.sh  meta.json  specs.md  specs1.md  specs2.md  specs3.md
.claude/: mayor_context.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
brat-ui/: index.html  package-lock.json  package.json
brat-ui/src/: App.vue  style.css
brat-ui/src/api/: brat.ts
brat-ui/src/components/common/: ConnectionStatus.vue  LoadingSpinner.vue  Modal.vue  NotificationToast.vue  StatusBadge.vue  StatusCard.vue
brat-ui/src/components/layout/: Header.vue  Sidebar.vue
brat-ui/src/composables/: usePolling.ts  useWebSocket.ts
brat-ui/src/router/: index.ts
brat-ui/src/stores/: repo.ts
brat-ui/src/types/: brat.ts
brat-ui/src/views/: Convoys.vue  Dashboard.vue  Mayor.vue  Sessions.vue  Tasks.vue
crates/brat/: Cargo.toml
crates/brat/src/: agents_md.rs  cli.rs  context.rs  error.rs  grite_cli.rs  lib.rs  main.rs  output.rs
crates/brat/src/api/: mod.rs  server.rs  state.rs
crates/brat/src/api/routes/: convoys.rs  events.rs  health.rs  mayor.rs  mod.rs  repos.rs  sessions.rs  status.rs  tasks.rs  websocket.rs
crates/brat/src/commands/: context.rs  convoy.rs  daemon.rs  doctor.rs  init.rs  lock.rs  mayor.rs  mod.rs  refinery.rs  session.rs  status.rs  task.rs  witness.rs  workflow.rs
crates/brat/src/daemon/: manager.rs  mod.rs
crates/brat/src/workflows/: error.rs  events.rs  locks.rs  mod.rs  reconcile.rs  refinery.rs  witness.rs
crates/brat/tests/integration/: daemon_optional.rs  doctor_rebuild.rs  helpers.rs  locks.rs  mod.rs  worktree_safe.rs
crates/libbrat-config/: Cargo.toml
crates/libbrat-config/src/: config.rs  lib.rs
crates/libbrat-engine/: Cargo.toml
crates/libbrat-engine/src/: aider.rs  claude_code.rs  codex.rs  continue_dev.rs  copilot.rs  engine.rs  error.rs  gemini.rs  lib.rs  mayor.rs  opencode.rs  platform.rs  shell.rs
crates/libbrat-grit/: Cargo.toml
crates/libbrat-grit/src/: client.rs  error.rs  id.rs  lib.rs  reconcile.rs  state_machine.rs  types.rs
crates/libbrat-grite/: Cargo.toml
crates/libbrat-grite/src/: client.rs  error.rs  lib.rs  reconcile.rs  state_machine.rs  types.rs
crates/libbrat-session/: Cargo.toml
crates/libbrat-session/src/: config.rs  error.rs  event.rs  handle.rs  lib.rs  logs.rs  monitor.rs
crates/libbrat-workflow/: Cargo.toml
crates/libbrat-workflow/src/: error.rs  executor.rs  lib.rs  parser.rs  schema.rs
crates/libbrat-worktree/: Cargo.toml
crates/libbrat-worktree/src/: error.rs  git.rs  lib.rs  manager.rs
docs/: acceptance-tests.md  actors.md  agent-continuity.md  agent-playbook.md  architecture.md  brat-cli.md  brat-status-schema.md  bratd.md  canonical-spec.md  cli.md  convoy-task-schema.md  daemon.md  data-model.md  engine.md  export-format.md  gastown-gap-closure.md  git-wal.md  grit-mapping.md  harness-config.md  label-glossary.md  locking.md  merge-policy.md  motion-canvas-report.md  multi-repo.md  naming.md  operations.md  roadmap.md  roles.md  security-signing.md  session-event-schema.md  state-machine.md  tmux-bootstrap.sh  usability.md  why.md  witness-cli-smoke.md  worktrees.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/concepts/: architecture.md  convoys-and-tasks.md  engines.md  index.md  roles.md
documentation/docs/configuration/: config-file.md  daemon.md  index.md
documentation/docs/getting-started/: first-convoy.md  index.md  installation.md  quickstart.md
documentation/docs/guides/: index.md  managing-convoys.md  managing-tasks.md  troubleshooting.md  using-the-mayor.md  web-dashboard.md  workflows.md
documentation/docs/reference/: cli.md  index.md
packaging/chocolatey/: brat.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/gem/: brat-cli.gemspec
packaging/gem/exe/: brat
packaging/gem/lib/: brat_cli.rb
packaging/homebrew/: brat.rb
packaging/npm/: package.json
packaging/npm/scripts/: install.js
packaging/pip/: pyproject.toml
packaging/pip/brat_cli/: __init__.py
scripts/: context_pool_watch.py  continuity_supervisor.py  mayor-demo.sh  mayor-test-setup.sh  mayor-watch.sh  session_handoff.py  start_continuity_supervisor.sh  test_continuity_stack.sh  ui-demo.sh
tests/: test_continuity_supervisor.py
