[workspace]
resolver = "2"
members = [
    "crates/libbrat-engine",
    "crates/libbrat-config",
    "crates/libbrat-grit",
    "crates/libbrat-worktree",
    "crates/libbrat-session",
    "crates/brat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Internal crates
libbrat-engine = { path = "crates/libbrat-engine" }
libbrat-config = { path = "crates/libbrat-config" }
libbrat-grit = { path = "crates/libbrat-grit" }
libbrat-worktree = { path = "crates/libbrat-worktree" }
libbrat-session = { path = "crates/libbrat-session" }
