[package]
name = "brat"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brat"
path = "src/main.rs"

[dependencies]
libbrat-config.workspace = true
libbrat-engine.workspace = true
libbrat-grit.workspace = true
libbrat-worktree.workspace = true
libbrat-session.workspace = true
libbrat-workflow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
serde = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
