[package]
name = "libbrat-engine"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
uuid.workspace = true
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
