[package]
name = "libbrat-engine"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
uuid.workspace = true
rand.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
