[package]
name = "libbrat-grit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Grit integration library for Brat"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
